# aura_mcp

./: Cargo.toml  README.md
docs/: agent-instructions.md  api.md  auth.md  grpc.md  overview.md  proto-main.md  tools.md
examples/: rust.md  typescript.md
src/: activity.rs  aura.rs  config.rs  lib.rs  main.rs  mcp.rs  validation.rs
