[package]
name = "aura_mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "aura-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
aura_api_client = { git = "https://github.com/in-aura-we-trade/aura_api_client" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
decisol = { git = "https://github.com/4r33x/decisol", features = ["proto"] }
fastnum = "0.7.4"
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-address = { version = "2", features = ["serde"] }
solana-keypair = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
toml = "1.1.2"
tonic = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
async-trait = "0.1"
